# github-ci-testing

./: pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
config/: settings.py
